# batch-lapse

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  build-info.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
