[package]
name = "batchlapse"
version = "26.7.12"
description = "Portable batch timelapse video tool"
authors = ["BatchLapse contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "batchlapse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.0"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
